Muestra minas en todas las celdas

--- a/buscaminasApp/templates/crear_tablero.html
+++ b/buscaminasApp/templates/crear_tablero.html
@@ -3,29 +3,29 @@
 <head>
     <title>Tablero de Buscaminas</title>
     <style>
-        *{
-           font-family: sans-serif;
+        * {
+            font-family: sans-serif;
         }
-        h1{
-            color: cornflowerblue
+        h1 {
+            color: cornflowerblue;
         }
     </style>
 </head>
 <body>
-    <h1>Crear Tablero de Buscaminas</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Crear Tablero">
-    </form>
-    <p><br></p>
+    <h1>Tablero de Buscaminas</h1>
     
     {% if tablero %}
     <table border="1">
-        {% for row in tablero %}
+        {% for fila in tablero.casillas %}
         <tr>
-            {% for cell in row %}
-            <td style="width: 30px; height: 30px;">{{ cell }}</td>
+            {% for casilla in fila %}
+                <td style="width: 30px; height: 30px;">
+                    {% if casilla.tiene_mina %}
+                        X
+                    {% else %}
+                        {{ casilla.minas_adyacentes }}
+                    {% endif %}
+                </td>
             {% endfor %}
         </tr>
         {% endfor %}
@@ -33,3 +33,5 @@
     {% endif %}
 </body>
 </html>
+
+
