Actualización del CSS

--- a/buscaminasApp/templates/crear_tablero.html
+++ b/buscaminasApp/templates/crear_tablero.html
@@ -6,8 +6,13 @@
         * {
             font-family: sans-serif;
         }
-        h1 {
-            color: cornflowerblue;
+        .cabecera{
+                background-color: deepskyblue;
+                padding: 20px;
+                color: white;
+        }
+        .cuerpo{
+            margin: 30px;
         }
         table, td{
             text-align: center;
@@ -21,34 +26,36 @@
     </style>
 </head>
 <body>
-    <h1>Tablero de Buscaminas</h1>
-    <form method="post">
+    <div class="cabecera"><h1>Tablero de Buscaminas</h1><h5>Created by Sergio Navarro</h5></div>
+    <div class="cuerpo">
+        <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Crear Tablero">
-    </form>
+        </form>
 
-    <p><br></p>
+        <p><br></p>
 
-    {% if tablero %}
-    <table>
-        {% for fila in tablero.casillas %}
-        <tr>
-            {% for casilla in fila %}
-                {% if casilla.tiene_mina %}
-                    <td style="width: 50px; height: 50px">X</td>
-                {% else %}
-                    {% if casilla.minas_adyacentes == 0 %}
-                        <td style="width: 50px; height: 50px"></td>
+        {% if tablero %}
+        <table>
+            {% for fila in tablero.casillas %}
+            <tr>
+                {% for casilla in fila %}
+                    {% if casilla.tiene_mina %}
+                        <td style="width: 50px; height: 50px">X</td>
                     {% else %}
-                        <td style="width: 50px; height: 50px">{{ casilla.minas_adyacentes }}</td>
+                        {% if casilla.minas_adyacentes == 0 %}
+                            <td style="width: 50px; height: 50px"></td>
+                        {% else %}
+                            <td style="width: 50px; height: 50px">{{ casilla.minas_adyacentes }}</td>
+                        {% endif %}
                     {% endif %}
-                {% endif %}
+                {% endfor %}
+            </tr>
             {% endfor %}
-        </tr>
-        {% endfor %}
-    </table>
-    {% endif %}
+        </table>
+        {% endif %}
+    </div>
 </body>
 </html>
 
